2020-03-01  Fred Kiefer <fredkiefer@gmx.de>

	* Tests/base/NSBundle/TestInfo,
	* Tests/base/NSBundle/GNUmakefile.preamble,
	* Tests/base/NSBundle/resources2.m: Extend test to check for
	framework resource loading.

2020-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Resources/Languages/Locale.canonical:
	Backward compatibility fix for ICU 65 by Fred Kiefer
	* Resources/Languages/README: Fix trivial typo

2020-02-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/objc-load.m: update GSPrivateSymbolPath() so that, on the
	path where LINKER_GETSYMBOL os not available, we attempt to lookup
	classes using the prefix ._OBJC_CLASS_ for the 2.0 ABI (earlier
	ABIs use a prefix of __objc_class_name_ for the class definition.

2020-02-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: When building the list of hosts to be probed to see
	if they have gdomap servers, fix code to include those explicitly
	defined in the config file.  Add -S option to list the addresses of
	the known gdomap servers.
	* Tools/gdomap.8: Document the new command line option.

2020-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSXPCConnection.h: remove unistd.h since
	workaround broke blocks code.  I guess we have to hope that
	sys/types.h has gid_t, pid_t, and uid_t on all systems we target.

2020-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Examples/dictionary.m:
	* Examples/nsconnection_client.m:
	* Headers/GNUstepBase/GNUstep.h:
	* Source/Additions/GSMime.m:
	* Source/NSConnection.m:
	* Source/NSDictionary.m:
	* Source/NSException.m:
	* Source/NSFileManager.m:
	* Source/NSFileWrapper.m:
	* Source/NSTask.m:
	* Source/NSUserDefaults.m:
	* Tools/AGSIndex.m:
	* Tools/AGSOutput.m:
	* Tools/cvtenc.m:
	Switch various places away from deprecated CREATE_AUTORELEASE_POOL()
	to use the ARC-compatible ENTER_POOL and LEAVE_POOL macros.

2020-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSXPCConnection.h: Workaround for clash between